# ezxml

./: Makefile  README.md  meson.build  test.c
src/: ezxml.c
test/: 01_simple.c
